Fix z-index of score widget

--- a/SaturdayQuizWeb/wwwroot/css/styles.less
+++ b/SaturdayQuizWeb/wwwroot/css/styles.less
@@ -151,7 +151,7 @@ body {
 
 #score-container {
   position: absolute;
-  z-index: 100;
+  z-index: 1000;
   padding: @dimen-outer-padding;
 }
 
